# StudyRoom_QT

./: .gitignore  CMakeLists.txt  mainserver.cpp  mainserver.h  mainserver.ui
StudyRoom_client/: CMakeLists.txt  main.cpp  mainclient.cpp  mainclient.h  mainclient.ui
StudyRoom_server/: CMakeLists.txt  main.cpp  mainserver.cpp  mainserver.h  mainserver.ui
